# RoboticsCPP

./: .gitignore  Dockerfile  README.md
src/roboticscpp/: CMakeLists.txt  package.xml
src/roboticscpp/config/: config.yaml
src/roboticscpp/include/roboticscpp/: detector.hpp  image_subscriber.hpp  types.hpp
src/roboticscpp/src/: CMakeLists.txt  detector.cpp  image_subscriber.cpp  main.cpp
